styles.css
body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
input { width: 80%; padding: 10px; margin: 10px 0; }
select { width: 80%; padding: 10px; margin: 10px 0; }
#modelInput { width: 50%; padding: 10px; margin: 10px 0; }
#versionInput { width: 10%; padding: 10px; margin: 10px 0; }
button { padding: 10px 15px; cursor: pointer; }
#packagesInput { width: 40%; padding: 10px; margin: 10px 0; }
#disabled_servicesInput { width: 40%; padding: 10px; margin: 10px 0; }
#scriptsInput { width: 8%; padding: 10px; margin: 10px 0; }

#clearTokenButton {
    position: fixed;
    bottom: 20px;
    right: 20px;
    padding: 10px 15px;
    cursor: pointer;
}

@media (prefers-color-scheme: dark) {
    html, img, video, iframe, header, .btn {
        background-color: #212830;
        color: #e7e5e4;
    }
    body {
        background-color: #212830;
    }
    input,
    #modelInput, #versionInput, #packagesInput, #disabled_servicesInput, #scriptsInput, button {
        background-color: #3d444d;
        color: #d0d0d0;
    }
    input {
        color-scheme: dark;
      }
}

